# nfl-prediction-app

./: .gitignore  README.md  job_logs.txt  latest_logs.txt  setup.sh  setup_wif.bat
00-PROJECT-LEAD/: BACKEND_API_SPEC_PHASE5.md  BUG-001-CLONE-DROPS-FEATURES.md  BUG-002-DEPRECATED-FEATURES.md  FRONTEND_SPEC_PHASE5.md  GATE_REVIEW_PHASE1.md  GATE_REVIEW_PHASE4_RUSH.md  INC-001-INVESTIGATION-REPORT.md  INC-001-label-inversion.md  PHASE3_STATUS.md  PHASE4_STATUS.md  PHASE5_SPRINT_PROMPT.md  PHASE5_STATUS.md  ROADMAP.md  RUSH_FEATURE_EXPERIMENTS_REVIEW.md  RUSH_VALIDATION_PLAN.md  SITUATIONAL_EXPERIMENT_PLAN.md  instructions.md
01-DATA-PIPELINE/: Dockerfile.job  RUN.md  (+5 more)
03-BACKEND-API/: .env.example  Dockerfile  WORK-ORDER-BUG-001-002.md  audit_experiments.sql  cloudbuild.yaml  instructions.md  pyproject.toml
03-BACKEND-API/app/: bigquery_client.py  claude_inference.py  config.py  dependencies.py  main.py  storage.py
03-BACKEND-API/app/queries/: datasets.py  experiments.py  features.py  frameworks.py  games.py  predictions.py  teams.py
03-BACKEND-API/app/routers/: datasets.py  experiments.py  features.py  frameworks.py  games.py  health.py  predictions.py  teams.py
03-BACKEND-API/app/schemas/: common.py  datasets.py  experiments.py  features.py  frameworks.py  games.py  teams.py
03-BACKEND-API/scripts/: process_dataset_upload.py
03-BACKEND-API/tests/: conftest.py  test_auth.py  test_datasets.py  test_experiments.py  test_experiments_write.py  test_frameworks.py  test_games.py  test_health.py  test_infer_schema.py  test_predictions.py  test_teams.py
(+207 files in other folders)
