[project]
name = "nfl-backend-api"
version = "0.1.0"
description = "NFL Prediction Platform — Backend API (FastAPI / Cloud Run)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.7.0",
    "google-cloud-bigquery[pandas]>=3.22.0",  # [pandas] pulls db-dtypes for nullable types
    "google-cloud-storage>=2.16.0",
    "google-auth>=2.26.0",
    "requests>=2.31.0",
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",    # Excel (.xlsx) parsing via pandas
    "python-multipart>=0.0.9",
    "python-dotenv>=1.0.0",
    "anthropic>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "pytest-mock>=3.14.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
